--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -8,14 +8,12 @@ target 'DeviceRiskSdkExample' do
 
   use_react_native!(:path => config["reactNativePath"])
 
-  pod 'react-native-device-risk-sdk', :path => '../..'
-
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
-  use_flipper!({ 'Flipper' => '0.80.0' })
+  # use_flipper!({ 'Flipper' => '0.80.0' })
   post_install do |installer|
-    flipper_post_install(installer)
+    # flipper_post_install(installer)
   end
 end
