--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.4",
-    "react-native-device-risk-sdk": "^0.1.1"
+    "react-native-device-risk-sdk": "0.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
